test/tests/compiler/18_structures/invalid_types/invalid_incomplete_structs/incomplete_struct_member.plx
type struc s;

extrn foo: struc s;

pub fn main(none) i32 {
    return foo.a #  can't get member of incomplete structure type
}
